--- a/clone.html
+++ b/clone.html
@@ -7,14 +7,26 @@
     <title>links</title>
     <style>
         a {
-            background-color: red;
-            color: white;
+            background-color:yellowgreen;
+            color:violet;
             text-underline-position: none;
             font-size: 30px;
+            border-radius: 10px;
+            text-decoration: none;
+        }
+        a:hover {
+            color:yellowgreen;
+            background-color: violet;
+        }
+        div {
+            width :10cm;
+            length :30px;
         }
     </style>
 </head>
 <body>
-    <a href="http://www.nomadcoders.co">click to go nomadcoder</a>
+    <h1 id="rappin">if you wanna buy this, you should push below button;</h1>
+    <a href="hi.html">perchase</a>
+    
 </body>
 </html>
